@@ -1,1 +1,1 @@
-#define SERIALNUM "20010624_6"
+#define SERIALNUM "20010626_1"
